--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.14.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
