--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-mailchimp-subscribe": "^2.1.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-flippy": "^1.1.0",
     "react-icons": "^4.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-modal": "^3.14.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
