--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
+    "react-scroll-rotate": "^0.0.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
