--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-mailchimp-subscribe": "^2.1.1",
+    "@types/react-slick": "^0.23.7",
     "@types/react-transition-group": "^4.4.3",
     "bootstrap": "5.1.1",
     "node-sass": "^6.0.1",
@@ -27,6 +28,8 @@
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "react-scroll-rotate": "^0.0.7",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
