--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-modal": "^3.14.3",
+    "react-player": "^2.9.0",
     "react-reveal": "^1.2.2",
     "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
