--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-slick": "^0.23.7",
     "@types/react-transition-group": "^4.4.3",
     "bootstrap": "5.1.1",
+    "html-to-react": "^1.4.7",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
